# orimboard

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  k6_ws_test.js  skaffold.yaml
.cloud/aws/: setup.sh
.cloud/gcp/: setup.sh
.github/workflows/: rust.yml  server.yml
.migrations/: core_tables.sql
agones/: skaffold.yaml
agones/helm/: values.yaml
api/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.agones  skaffold.yaml
api/k8s/: 2_deploy.yml  3_service.yml  4_ingress_rest.yml
api/src/: main.rs
api/src/board/: agones.rs  client.rs  component.rs  local.rs  mod.rs  payload.rs
api/src/handler/: board.rs  user.rs
client/: .dockerignore  .env  .env.production  .eslintrc.json  .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  postcss.config.js  skaffold.yaml  tailwind.config.js
client/api/auth/: cookie.ts  manager.ts  redirect.ts  securePageLoad.ts
client/api/board/: loadBoardState.ts  useAllocator.ts  useWidgets.ts
client/api/client/: index.ts
client/api/http/: index.ts  provider.ts
client/api/user/: index.ts
client/components/board/: useBoardState.ts
client/components/brand/: logo.tsx
client/components/button/: index.tsx
client/components/chat/: active-user.tsx  message.tsx  messenger.tsx
client/components/feedback/: Alert.tsx
client/components/format/: date.tsx
client/components/icon/: icon-kind.ts  icon.tsx
client/components/icon/icons/: ArrowBoth.tsx  Check.tsx  (+132 more)
client/components/layout/: card.tsx
client/components/navigation/: board-nav.tsx
client/components/pallette/: index.tsx
client/k8s/: 2_deploy.yml  3_service.yml  4_ingress.yml
client/pages/: index.tsx
client/pages/api/: board.ts
client/pages/board/: [id].tsx
client/styles/: globals.css
client/whiteboard/: canvas.tsx  index.tsx  sketchpad.tsx
client/whiteboard/chat/: index.tsx
client/whiteboard/drawing/: line.ts
client/whiteboard/hooks/: useWindowSize.ts
client/whiteboard/socket/: useSocket.ts
client/whiteboard/state/: action.ts  index.ts  loader.tsx  useBoardState.ts
client/whiteboard/user/: index.tsx
client/whiteboard/widget/: index.tsx
docs/: SCALING.md
fleet-manager/helm/: values.yaml
kind/: setup_cluster.sh  setup_ingress.sh
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.agones  README.md  fleet.yaml  skaffold.yaml
server/k8s/: 1_ns.yml  2_deploy.yml  3_service.yml  4_ingress_ws.yml  5_ingress_rest.yml
server/k8s-agones/: 1_fleet.yml  2_fleet.yml  2_scaler.yml  3_service.yml  4_ingress_ws.yml
server/src/: main.rs  telemetry.rs
server/src/board/: component.rs  health.rs  message.rs  mod.rs  registry.rs  server.rs  space.rs  storage.rs  user.rs
server/src/board/storage/: backend.rs  kafka.rs  mod.rs  service.rs
server/src/board/widget/: data.rs  mod.rs
server/src/gameserver/: health.rs  healthcheck.rs  manager.rs  mod.rs  sdk.rs  standalone.rs  watcher.rs
server/src/handler/: board.rs  client.rs  health_check.rs  mod.rs  user.rs
server/src/service/: user.rs
server/src/service/datastore/: mod.rs  user.rs
server/src/user/: client.rs  mod.rs  registry.rs
server/static/: index.html
src/: main.rs
src/board/: server.rs  space.rs  user.rs
src/handler/: mod.rs
src/service/: mod.rs  user.rs
static/: index.html
usersvc/: Cargo.toml  Dockerfile  skaffold.yaml
usersvc/k8s/: 2_deploy.yml  3_service.yml  4_ingress_rest.yml
usersvc/src/: main.rs
usersvc/src/board/: mod.rs
usersvc/src/handler/: mod.rs
usersvc/src/user/: mod.rs  registry.rs
(+5 files in other folders)
