[package]
name = "orim-board-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.3"
actix-files = "0.6.2"
actix-web = "4.1.0"
actix-web-actors = "4.1.0"
dashmap = "5.4.0"
derive_more = "0.99.17"
env_logger = "0.9.0"
log = "0.4.17"
nanoid = "0.4.0"
rand = "0.8.5"
random_color = "0.6.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_millis = "0.1.1"
