[package]
name = "orim-board-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
dashmap = "5.5.3"
derive_more = "0.99.17"
env_logger = "0.9.3"
log = "0.4.20"
rand = "0.8.5"
random_color = "0.6.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_millis = "0.1.1"
tokio = { version = "1.34.0", features = ["full"] }
agones = { version = "1.36.0", optional = true }
thiserror = "1.0.50"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[features]
agones_sdk = ["agones"]
