[package]
name = "orim-board-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-cors = "0.6.5"
actix-files = "0.6.6"
actix-web = "4.10.2"
actix-web-actors = "4.3.1"
dashmap = "5.5.3"
derive_more = "0.99.19"
env_logger = "0.9.3"
log = "0.4.27"
rand = "0.8.5"
random_color = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_millis = "0.1.1"
tokio = { version = "1.44.1", features = ["full"] }
agones = { version = "1.48.0", optional = true }
thiserror = "1.0.69"
reqwest = { version = "0.11.27", features = ["json", "rustls-tls"], default-features = false }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
opentelemetry = { version = "0.21.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.14.0", features = [
    "reqwest-client",
    "reqwest-rustls",
    "http-proto",
] }
opentelemetry-semantic-conventions = "0.13.0"
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22.0"
once_cell = "1.21.3"

[features]
agones_sdk = ["agones"]
